[package]
name = "mina-graphql-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.39"
graphql_client = "0.9.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.11.3", features = ["json", "blocking"] }
log = "0.4"
